@@ -18,7 +18,8 @@ package org.kaazing.netx.http.internal;
 
 import static java.lang.String.format;
 
-import java.io.IOException;
+import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Arrays;
@@ -30,34 +31,40 @@ public final class Origin {
 
     private static String ORIGIN;
 
-    public static String get() throws IOException {
+    private static final Method CLOSE_URL_CLASS_LOADER;
+
+    public static String get() {
 
         if (ORIGIN == null) {
             ClassLoader cl = Origin.class.getClassLoader();
             String origin = null;
 
             if (cl instanceof URLClassLoader) {
-                @SuppressWarnings("resource")
                 URLClassLoader ucl = (URLClassLoader) cl;
 
                 URL[] urls = ucl.getURLs();
-                if (urls.length == 1) {
-                    origin = asOrigin(urls[0]);
-                }
-                else {
-                    for (URL url : urls) {
-                        try (URLClassLoader candidate = new URLClassLoader(new URL[] { url })) {
-                            try {
-                                Class<?> candidateClass = candidate.loadClass(Origin.class.getName());
-                                assert candidateClass != null;
-                                if (Arrays.equals(Origin.class.getSigners(), candidateClass.getSigners())) {
-                                    origin = asOrigin(url);
-                                    break;
-                                }
-                            }
-                            catch (ClassNotFoundException e) {
-                                // ignore, try next candidate
-                            }
+                for (URL url : urls) {
+                    URLClassLoader candidate = new URLClassLoader(new URL[] { url });
+
+                    try {
+                        Class<?> candidateClass = candidate.loadClass(Origin.class.getName());
+                        assert candidateClass != null;
+                        if (Arrays.equals(Origin.class.getSigners(), candidateClass.getSigners())) {
+                            origin = asOrigin(url);
+                            break;
+                        }
+                    }
+                    catch (ClassNotFoundException e) {
+                        // ignore, try next candidate
+                    }
+
+                    // clean up in Java7+
+                    if (CLOSE_URL_CLASS_LOADER != null) {
+                        try {
+                            CLOSE_URL_CLASS_LOADER.invoke(candidate);
+                        }
+                        catch (Exception e) {
+                            // ignore
                         }
                     }
                 }
@@ -74,31 +81,42 @@ public final class Origin {
     }
 
     // unit tests
-    static String asOrigin(URL url) throws IOException {
-        if ("jar".equals(url.getProtocol())) {
-            String file = url.getFile();
-            int endAt = file.indexOf("!/");
+    static String asOrigin(URL url) {
+        URI uri = URI.create(url.toString());
+
+        if ("jar".equals(uri.getScheme())) {
+            String schemeSpecificPart = uri.getSchemeSpecificPart();
+            int endAt = schemeSpecificPart.indexOf("!/");
             if (endAt != -1) {
-                file = file.substring(0, endAt);
+                schemeSpecificPart = schemeSpecificPart.substring(0, endAt);
             }
-            url = new URL(file);
+            uri = URI.create(schemeSpecificPart);
         }
 
-        if ("file".equals(url.getProtocol())) {
+        if ("file".equals(uri.getScheme())) {
             return "null";
         }
 
-        String protocol = url.getProtocol();
-        String host = url.getHost();
-        int port = url.getPort();
-        if (port == -1) {
-            port = url.getDefaultPort();
-        }
-        return format("%s://%s:%d", protocol, host, port);
+        String scheme = uri.getScheme();
+        String host = uri.getHost();
+        int port = uri.getPort();
+
+        return port != -1 ? format("%s://%s:%d", scheme, host, port) : format("%s://%s", scheme, host);
     }
 
     private Origin() {
         // utility
+    }
+
+    static {
+        Method close = null;
+        try {
+            close = URLClassLoader.class.getDeclaredMethod("close");
+        }
+        catch (Exception e) {
+            // ignore
+        }
+        CLOSE_URL_CLASS_LOADER = close;
     }
 }
 
